oauth2-proxy/oauth2-proxy-ingress.yaml
---
# Source: oauth2-proxy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: oauth2-proxy
    helm.sh/chart: oauth2-proxy-7.7.9
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/part-of: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: oauth2-proxy
    app.kubernetes.io/version: "7.6.0"
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  rules:
    - host: "oauth2-proxy.example.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
